--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/styles-modal.css">
-    <script src="scripts/assignment08.js" defer></script>
+    <script src="scripts/final-assignment.js" defer></script>
 </head>
 <body>
 <main>
