- Game page work, - Game logic define, - Pop-ups for rules and End game

--- a/index.html
+++ b/index.html
@@ -38,18 +38,41 @@
         <div id="game-grid">
             <h3>Slice and Dice Game</h3>
             <div class="box">
+                <button id="game-rules">Rules</button>
                 <div class="game-box">
                     <div class="sub-box">
-                        <div><p>item 1</p></div>
-                        <div><p>item 2</p></div>
+                        <h4>You</h4>
+                        <p>Dice rolls</p>
+                        <img id="your-dice-1" src="images/dice-6.svg" alt="dice with red dot">
+                        <img id="your-dice-2" src="images/dice-6.svg" alt="dice with red dot">
                     </div>
                     <div class="sub-box">
-                        <div><p>item 3</p></div>
-                        <div><p>item 4</p></div>
+                        <h4>Computer</h4>
+                        <p>Dice rolls</p>
+                        <img id="comp-dice-1" src="images/dice-6.svg" alt="dice with red dot">
+                        <img id="comp-dice-2" src="images/dice-6.svg" alt="dice with red dot">
+                    </div>
+                </div>
+                <div class="game-box">
+                    <div class="sub-box">
+                        <h4>Your Score</h4>
+                        <p>Score this round:</p>
+                        <p id="your-score">0</p>
+                        <p>Total Score:</p>
+                        <p id="your-total-score">0</p>
+                    </div>
+                    <div class="sub-box">
+                        <h4>Computer's Score</h4>
+                        <p>Score this round:</p>
+                        <p id="computer-score">0</p>
+                        <p>Total Score:</p>
+                        <p id="comp-total-score">0</p>
                     </div>
                 </div>
                 <div class="btn-layout">
-                    <button id="btn-end-animation">End Game</button>
+                    <button id="btn-new-game">New Game</button>
+                    <button id="btn-roll-dice">Roll Dice</button>
+                    <button id="btn-end-game">End Game</button>
                 </div>
             </div>
         </div>
@@ -58,8 +81,29 @@
 <section id="pop-up" class="hidden">
     <div>
         <button id="close-pop-up">&#x2715;</button>
-        <h4>Instructions:</h4>
-        <p>Press Start to rotate the view of the bike. Press Stop to pause the rotation.</p>
+        <h4>How to Play:</h4>
+        <ul>
+            <li>Click on the 'Roll Dice' button.</li>
+            <li>To advance to the next round, click the 'Roll Dice' button again.</li>
+            <li>After three rounds, the game is over and the final score is calculated.</li>
+            <li>If you want to play again, click the 'New Game' button or refresh the page.</li>
+        </ul>
+
+        <h4>Rules:</h4>
+        <ul>
+            <li>Each round, you and the computer both roll a pair of dice.</li>
+            <li>Your score for that round will be based on the sum of the dice.</li>
+            <li>If you roll doubles (e.g. rolling a 3 and another 3) then your score is multiplied by 2.</li>
+            <li>Rolling a 1 will give you a score of 0 for that round.</li>
+            <li>The player who has the most points at the end of three rounds is the winner.</li>
+        </ul>
+    </div>
+</section>
+<section id="end-game-pop-up" class="hidden">
+    <div>
+        <h4>Game has ended</h4>
+        <button id="new-game-pop-up-btn">New Game</button>
+        <button id="dismiss-end-game-pop-up">Dismiss</button>
     </div>
 </section>
 </body>
